[gd_scene load_steps=41 format=2]

[ext_resource path="res://scenes/fadeIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/scripts/Kitchen.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/testSprites/TX Props.png" type="Texture" id=3]
[ext_resource path="res://scenes/cootsPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sprites/gameSprites/KitchenScene/Kitchen_Scene.png" type="Texture" id=5]
[ext_resource path="res://scenes/Pause.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui_Left_Container.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/catTower.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sprites/tileSprites/deskImage.png" type="Texture" id=9]
[ext_resource path="res://scenes/DersHealthBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/DeathScene.tscn" type="PackedScene" id=11]
[ext_resource path="res://resources/shaders/PixelShader.tres" type="Shader" id=12]
[ext_resource path="res://assets/sprites/gameSprites/GarageScene/GarageScene/LightOverlay.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/gameSprites/GarageScene/GarageScene/Floor.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/gameSprites/GarageScene/GarageScene/DarknessOverlay.png" type="Texture" id=15]
[ext_resource path="res://scenes/dersBattleOfCats.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/animations/top_to_middle.tres" type="Animation" id=17]
[ext_resource path="res://assets/animations/bottom_to_middle.tres" type="Animation" id=18]
[ext_resource path="res://assets/animations/top_to_bottom.tres" type="Animation" id=19]
[ext_resource path="res://assets/animations/middle_to_bottom.tres" type="Animation" id=20]
[ext_resource path="res://assets/animations/bottom_to_top.tres" type="Animation" id=21]
[ext_resource path="res://assets/animations/middle_to_top.tres" type="Animation" id=22]
[ext_resource path="res://assets/sprites/derFightSprites/ClawSwipe.png" type="Texture" id=23]
[ext_resource path="res://assets/animations/clawSwipeHorizontal.tres" type="Animation" id=24]
[ext_resource path="res://assets/animations/clawSwipeVertical.tres" type="Animation" id=25]
[ext_resource path="res://assets/animations/push.tres" type="Animation" id=26]
[ext_resource path="res://assets/sprites/derFightSprites/CirclePush.png" type="Texture" id=27]
[ext_resource path="res://scenes/FinalFade.tscn" type="PackedScene" id=28]
[ext_resource path="res://scenes/hazards/Spawner.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/hazards/FollowPlayer.tscn" type="PackedScene" id=30]

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 12 )
shader_param/amount = 250

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=9]
0/name = "deskImage.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 512, 448, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "deskImage.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 1120, 448, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 10 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=6]
0/name = "TX Props.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 224, 288, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=14]
radius = 30.0

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 1
emission_sphere_radius = 0.01
flag_disable_z = true
spread = 126.12
gravity = Vector3( 0, 100, 0 )
initial_velocity = 45.0
angular_velocity = 424.29
angular_velocity_random = 0.63
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 17.76
color = Color( 0.847059, 0.901961, 0.0784314, 1 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ders:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 421, 85 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ClawSwipesHorizontal/Swipe:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ClawSwipesHorizontal/Swipe2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ClawSwipesHorizontal/Swipe/Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ClawSwipesHorizontal/Swipe2/Area2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ClawSwipesHorizontal/Swipe:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ClawSwipesHorizontal/Swipe2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ClawSwipes/Swipe:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ClawSwipes/Swipe:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ClawSwipes/Swipe/Area2D/CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("ClawSwipes/Swipe2:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("ClawSwipes/Swipe2:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("ClawSwipes/Swipe2/Area2D/CollisionShape2D:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("ClawSwipes/Swipe5:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("ClawSwipes/Swipe5:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("ClawSwipes/Swipe5/Area2D/CollisionShape2D:disabled")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("ClawSwipes/Swipe6:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("ClawSwipes/Swipe6:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("ClawSwipes/Swipe6/Area2D/CollisionShape2D:disabled")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("ClawSwipes/Swipe3:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("ClawSwipes/Swipe3:modulate")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("ClawSwipes/Swipe3/Area2D/CollisionShape2D:disabled")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("ClawSwipes/Swipe4:visible")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("ClawSwipes/Swipe4:modulate")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("ClawSwipes/Swipe4/Area2D/CollisionShape2D:disabled")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/25/type = "value"
tracks/25/path = NodePath("StaticBody2D:scale")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/26/type = "value"
tracks/26/path = NodePath("ders:rotation_degrees")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "fall_to_earth"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ders:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ders:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 421, 85 ), Vector2( 506, 626 ) ]
}

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 63.3062, 27.5322 )

[node name="MainScene1" type="Node2D"]
script = ExtResource( 2 )

[node name="Wall" type="Sprite" parent="."]
material = SubResource( 11 )
position = Vector2( 496, 386 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="Floor" type="Sprite" parent="."]
visible = false
position = Vector2( 495, 625 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 14 )

[node name="LightOverlay" type="Sprite" parent="."]
visible = false
position = Vector2( 495, 389 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 13 )

[node name="DarknessOverlay" type="Sprite" parent="."]
position = Vector2( 495, 389 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 15 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 9 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
format = 1
tile_data = PoolIntArray( 983033, 1, 0, 983034, 1, 0, 983035, 1, 0, 983036, 1, 0, 983037, 1, 0, 983038, 1, 0, 983039, 1, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 917536, 1, 0, 917537, 1, 0, 917538, 1, 0, 917539, 1, 0, 917540, 1, 0, 917541, 1, 0, 1048569, 1, 0, 983077, 1, 0, 1114105, 1, 0, 1048613, 1, 0, 1179641, 1, 0, 1114149, 1, 0, 1245177, 1, 0, 1179685, 1, 0, 1310713, 1, 0, 1245221, 1, 0, 1376249, 1, 0, 1310757, 1, 0, 1441785, 1, 0, 1376293, 1, 0, 1507321, 1, 0, 1441829, 1, 0, 1572857, 1, 0, 1507365, 1, 0, 1638393, 1, 0, 1638394, 1, 0, 1638395, 1, 0, 1638396, 1, 0, 1638397, 1, 0, 1638398, 1, 0, 1638399, 1, 0, 1572864, 1, 0, 1572865, 1, 0, 1572866, 1, 0, 1572867, 1, 0, 1572868, 1, 0, 1572869, 1, 0, 1572870, 1, 0, 1572871, 1, 0, 1572872, 1, 0, 1572873, 1, 0, 1572874, 1, 0, 1572875, 1, 0, 1572876, 1, 0, 1572877, 1, 0, 1572878, 1, 0, 1572879, 1, 0, 1572880, 1, 0, 1572881, 1, 0, 1572882, 1, 0, 1572883, 1, 0, 1572884, 1, 0, 1572885, 1, 0, 1572886, 1, 0, 1572887, 1, 0, 1572888, 1, 0, 1572889, 1, 0, 1572890, 1, 0, 1572891, 1, 0, 1572892, 1, 0, 1572893, 1, 0, 1572894, 1, 0, 1572895, 1, 0, 1572896, 1, 0, 1572897, 1, 0, 1572898, 1, 0, 1572899, 1, 0, 1572900, 1, 0, 1572901, 1, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 496, 384 )
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="PauseLayer" parent="." instance=ExtResource( 6 )]

[node name="Pause" parent="PauseLayer" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hazardMap" type="TileMap" parent="."]
tile_set = SubResource( 6 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( 524285, 0, 0, 524305, 0, 0, 786429, 0, 0, 720914, 0, 0 )

[node name="heartLayer" type="CanvasLayer" parent="."]

[node name="HeartContainer" parent="heartLayer" instance=ExtResource( 7 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 218, 627 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="DeathScene" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="fadeIn" type="CanvasLayer" parent="."]

[node name="fadeIn" parent="fadeIn" instance=ExtResource( 1 )]
pause_mode = 2
visible = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 479, 542 )
collision_layer = 2
collision_mask = 0

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 27 )

[node name="push" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 14 )

[node name="catTower" parent="." instance=ExtResource( 8 )]

[node name="towerHealthBar" type="CanvasLayer" parent="."]

[node name="DersHealthBar" parent="towerHealthBar" instance=ExtResource( 10 )]

[node name="ders" parent="." instance=ExtResource( 16 )]
position = Vector2( 421, 85 )

[node name="heal" type="Particles2D" parent="."]
position = Vector2( 420, 41 )
scale = Vector2( 2, 2 )
emitting = false
amount = 100
process_material = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/bottom_to_middle = ExtResource( 18 )
anims/bottom_to_top = ExtResource( 21 )
anims/clawSwipeHorizontal = ExtResource( 24 )
anims/clawSwipeVertical = ExtResource( 25 )
anims/fall_to_earth = SubResource( 16 )
anims/middle_to_bottom = ExtResource( 20 )
anims/middle_to_top = ExtResource( 22 )
anims/push = ExtResource( 26 )
anims/top_to_bottom = ExtResource( 19 )
anims/top_to_middle = ExtResource( 17 )

[node name="ClawSwipes" type="Node2D" parent="."]

[node name="Swipe" type="Sprite" parent="ClawSwipes"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -118.001, 621.97 )
rotation = -1.57036
scale = Vector2( 2.40289, 1 )
texture = ExtResource( 23 )

[node name="Area2D" type="Area2D" parent="ClawSwipes/Swipe"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClawSwipes/Swipe/Area2D"]
position = Vector2( 0.195526, 0.534851 )
shape = SubResource( 13 )
disabled = true

[node name="Swipe2" type="Sprite" parent="ClawSwipes"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 94, 620 )
rotation = -1.57036
scale = Vector2( 2.40289, 1 )
texture = ExtResource( 23 )

[node name="Area2D" type="Area2D" parent="ClawSwipes/Swipe2"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClawSwipes/Swipe2/Area2D"]
position = Vector2( 0.195526, 0.534851 )
shape = SubResource( 13 )
disabled = true

[node name="Swipe5" type="Sprite" parent="ClawSwipes"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 376, 723 )
rotation = -1.57036
scale = Vector2( 2.40289, 1 )
texture = ExtResource( 23 )

[node name="Area2D" type="Area2D" parent="ClawSwipes/Swipe5"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClawSwipes/Swipe5/Area2D"]
position = Vector2( 0.195526, 0.534851 )
shape = SubResource( 13 )
disabled = true

[node name="Swipe6" type="Sprite" parent="ClawSwipes"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 585, 722 )
rotation = -1.57036
scale = Vector2( 2.40289, 1 )
texture = ExtResource( 23 )

[node name="Area2D" type="Area2D" parent="ClawSwipes/Swipe6"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClawSwipes/Swipe6/Area2D"]
position = Vector2( 0.195526, 0.534851 )
shape = SubResource( 13 )
disabled = true

[node name="Swipe3" type="Sprite" parent="ClawSwipes"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 800, 623 )
rotation = -1.57036
scale = Vector2( 2.40289, 1 )
texture = ExtResource( 23 )

[node name="Area2D" type="Area2D" parent="ClawSwipes/Swipe3"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClawSwipes/Swipe3/Area2D"]
position = Vector2( 0.195526, 0.534851 )
shape = SubResource( 13 )
disabled = true

[node name="Swipe4" type="Sprite" parent="ClawSwipes"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1065, 623 )
rotation = -1.57036
scale = Vector2( 2.40289, 1 )
texture = ExtResource( 23 )

[node name="Area2D" type="Area2D" parent="ClawSwipes/Swipe4"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClawSwipes/Swipe4/Area2D"]
position = Vector2( 0.195526, 0.534912 )
shape = SubResource( 13 )
disabled = true

[node name="ClawSwipesHorizontal" type="Node2D" parent="."]

[node name="Swipe" type="Sprite" parent="ClawSwipesHorizontal"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 499.107, 531 )
scale = Vector2( 10.7796, 1 )
texture = ExtResource( 23 )

[node name="Area2D" type="Area2D" parent="ClawSwipesHorizontal/Swipe"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClawSwipesHorizontal/Swipe/Area2D"]
position = Vector2( -0.899323, 0.534851 )
shape = SubResource( 13 )
disabled = true

[node name="Swipe2" type="Sprite" parent="ClawSwipesHorizontal"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 497, 708 )
scale = Vector2( 10.7796, 1 )
texture = ExtResource( 23 )

[node name="Area2D" type="Area2D" parent="ClawSwipesHorizontal/Swipe2"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClawSwipesHorizontal/Swipe2/Area2D"]
shape = SubResource( 13 )
disabled = true

[node name="zoneTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="drinkTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="stateTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="finalFade" type="CanvasLayer" parent="."]
layer = 5

[node name="kitchenTransition" parent="finalFade" instance=ExtResource( 28 )]

[node name="pushAnimationPlayer" type="AnimationPlayer" parent="."]
anims/push = ExtResource( 26 )

[node name="Spawners" type="Node2D" parent="."]
position = Vector2( -178, 730 )

[node name="Spawner" parent="Spawners" instance=ExtResource( 29 )]
spawnIN = ExtResource( 30 )

[node name="Spawner2" parent="Spawners" instance=ExtResource( 29 )]
position = Vector2( 1283, -195 )
spawnIN = ExtResource( 30 )

[node name="Spawner3" parent="Spawners" instance=ExtResource( 29 )]
position = Vector2( 2, -257 )
spawnIN = ExtResource( 30 )

[node name="Spawner4" parent="Spawners" instance=ExtResource( 29 )]
position = Vector2( 1344, 1 )
spawnIN = ExtResource( 30 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="zoneTimer" to="." method="_on_zoneTimer_timeout"]
[connection signal="timeout" from="drinkTimer" to="." method="_on_drinkTimer_timeout"]
[connection signal="timeout" from="stateTimer" to="." method="_on_stateTimer_timeout"]

[editable path="PauseLayer"]
